@@ -1,114 +1,37 @@
+/*
+ * Copyright (c) 2024, Oracle and/or its affiliates.
+ *
+ * Licensed under the Universal Permissive License v 1.0 as shown at https://opensource.org/license/UPL.
+ */
+
 package com.example;
 
 import io.micronaut.core.io.ResourceResolver;
-import io.micronaut.core.io.scan.ClassPathResourceLoader;
 import org.graalvm.polyglot.*;
-import org.graalvm.polyglot.io.IOAccess;
-
 import java.io.IOException;
-import java.net.URI;
-import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+
 
 
 @io.micronaut.context.annotation.Context
 public class ExcelizeService {
 
     private final ResourceResolver resourceResolver;
+    private final ExcelizePool excelizePool;
+    private final Context context;
 
-    public ExcelizeService(ResourceResolver resourceResolver) {
+    public ExcelizeService(ResourceResolver resourceResolver,ExcelizePool excelizePool) {
         this.resourceResolver = resourceResolver;
+        this.excelizePool = excelizePool;
+        this.context = excelizePool.getContext();
     }
 
 
     public void runExcelizeComplete(Object[][] array) throws IOException {
-        // Constants
-        final String INTERNAL_MODULE_URI_HEADER = "oracle:/mle/";
-
-        // Helper method for reading files
-        byte[] excelizeWasmBytes  = resourceResolver.getResourceAsStream("classpath:excelize.wasm").get().readAllBytes();
-
-        // Load test file based on fileSize
-        String test = null;
-        System.out.println("Executing excelize ");
-
-        test = Files.readString(Paths.get("./src/main/resources/excelize_test.js"));
-        // Load required JavaScript files
-
-        String prep = Files.readString(Paths.get("./src/main/resources/excelize_prep.js"));
-        String encodingIdxs = Files.readString(Paths.get("./src/main/resources/encoding-indexes.js"));
-        String encoding = Files.readString(Paths.get("./src/main/resources/encoding.js"));
-        String excelizeLib = Files.readString(Paths.get("./src/main/resources/excelize_m.js"));
-
-        // Configure options
-        Map<String, String> options = new HashMap<>();
-        options.put("js.ecmascript-version", "2023");
-        options.put("js.top-level-await", "true");
-        options.put("js.webassembly", "true");
-        options.put("js.commonjs-require", "true");
-        options.put("js.esm-eval-returns-exports", "true");
-        options.put("js.unhandled-rejections", "throw");
-        options.put("js.commonjs-require-cwd", Paths.get("./").toAbsolutePath().toString());
-
-        Map<String, String> engineOptions = new HashMap<>();
-        engineOptions.put("engine.CompilerThreads", "1");
-        engineOptions.put("engine.TraceCompilationDetails", "true");
-        engineOptions.put("engine.WarnInterpreterOnly", "false");
-        engineOptions.put("engine.MultiTier", "true");
-        engineOptions.put("engine.Mode", "throughput");
-        engineOptions.put("log.file", "test1.log");
-
-        // Create and configure the engine
-        try (Engine engine = Engine.newBuilder("js", "wasm")
-                .allowExperimentalOptions(true)
-                .options(engineOptions)
-                .build()) {
-
-            // Initialize context for WASM precompilation
-
-
-            if (test != null) {
-                // For each iteration, create a new context
-                Context context = Context.newBuilder("js", "wasm")
-                        .engine(engine)
-                        .allowIO(IOAccess.ALL)
-                        .allowAllAccess(true)
-                        .allowPolyglotAccess(PolyglotAccess.ALL)
-                        .allowExperimentalOptions(true)
-                        .allowHostClassLookup(s -> true)
-                        .allowHostAccess(HostAccess.ALL)
-                        .options(options)
-                        .build();
-
-                Source encodingIdxsModule = Source.newBuilder("js", encodingIdxs, "encoding-indexes.js").build();
-                context.eval(encodingIdxsModule);
-                Source encodingModule = Source.newBuilder("js", encoding, "encoding.js").build();
-                context.eval(encodingModule);
-
-                Source prepModule = Source.newBuilder("js", prep, "prep.js").build();
-                context.eval(prepModule);
-
-
-                Source excelizeModule = Source.newBuilder("js", excelizeLib, "excelize.mjs")
-                        .mimeType("application/javascript+module")
-                        .uri(URI.create(INTERNAL_MODULE_URI_HEADER + "excelize.mjs"))
-                        .build();
-                Value excelizeMod = context.eval(excelizeModule);
-                context.getPolyglotBindings().putMember("excelize", excelizeMod);
-                context.getBindings("js").putMember("wasmBytes", excelizeWasmBytes);
-
-                // Run the test
-                Source testRun = Source.newBuilder("js", test, "excelize_test.js").build();
-                context.eval(testRun);
                 Value x = context.getBindings("js").getMember("generateExcel");
-
-
                 Value jsArray = context.eval("js", "[]");
                 for (Object[] row : array) {
                     Value jsRow = context.eval("js", "[]");
@@ -119,7 +42,6 @@ public class ExcelizeService {
                 }
 
                 x.execute(jsArray);
-
                 // Save output Excel file
                 Value buffer = context.getPolyglotBindings().getMember("excelBuffer");
                 if (buffer != null && buffer.hasArrayElements()) {
@@ -128,92 +50,18 @@ public class ExcelizeService {
                     for (int j = 0; j < length; j++) {
                         fileBytes[j] = (byte) buffer.getArrayElement(j).asInt();
                     }
-                    Files.write(Paths.get("output.xlsx"), fileBytes);
+                    Files.write(Paths.get("src/main/resources/output.xlsx"), fileBytes);
                     System.out.println("Excel file saved as output.xlsx");
                 } else {
                     System.err.println("No buffer exported from JS.");
                 }
 
-                // Close the context
-                context.close();
+
             }
 
-        }
-    }
-
     public List<Book> readExcelFromFile(byte[] excelBytes) throws IOException {
-        final String INTERNAL_MODULE_URI_HEADER = "oracle:/mle/";
 
-        // Read the WASM file bytes
-        byte[] excelizeWasmBytes = resourceResolver.getResourceAsStream("classpath:excelize.wasm").get().readAllBytes();
-
-
-        System.out.println("Executing excelize read...");
-
-        // Load required JavaScript files:
-        String prep = Files.readString(Paths.get("./src/main/resources/excelize_prep.js"));
-        String encodingIdxs = Files.readString(Paths.get("./src/main/resources/encoding-indexes.js"));
-        String encoding = Files.readString(Paths.get("./src/main/resources/encoding.js"));
-        String excelizeLib = Files.readString(Paths.get("./src/main/resources/excelize_m.js"));
-        // New JS file which defines our reading function (readExcel)
-        String test = Files.readString(Paths.get("./src/main/resources/excelize_test.js"));
-
-        // Configure options (same as your write code)
-        Map<String, String> options = new HashMap<>();
-        options.put("js.ecmascript-version", "2023");
-        options.put("js.top-level-await", "true");
-        options.put("js.webassembly", "true");
-        options.put("js.commonjs-require", "true");
-        options.put("js.esm-eval-returns-exports", "true");
-        options.put("js.unhandled-rejections", "throw");
-        options.put("js.commonjs-require-cwd", Paths.get("./").toAbsolutePath().toString());
-
-        Map<String, String> engineOptions = new HashMap<>();
-        engineOptions.put("engine.CompilerThreads", "1");
-        engineOptions.put("engine.TraceCompilationDetails", "true");
-        engineOptions.put("engine.WarnInterpreterOnly", "false");
-        engineOptions.put("engine.MultiTier", "true");
-        engineOptions.put("engine.Mode", "throughput");
-        engineOptions.put("log.file", "test1.log");
-
-        try (Engine engine = Engine.newBuilder("js", "wasm")
-                .allowExperimentalOptions(true)
-                .options(engineOptions)
-                .build()) {
-
-
-
-            // Create context for executing the read function
-            Context context = Context.newBuilder("js", "wasm")
-                    .engine(engine)
-                    .allowIO(IOAccess.ALL)
-                    .allowAllAccess(true)
-                    .allowPolyglotAccess(PolyglotAccess.ALL)
-                    .allowExperimentalOptions(true)
-                    .allowHostClassLookup(s -> true)
-                    .allowHostAccess(HostAccess.ALL)
-                    .options(options)
-                    .build();
-
-            // Evaluate additional helper modules
-            Source encodingIdxsModule = Source.newBuilder("js", encodingIdxs, "encoding-indexes.js").build();
-            context.eval(encodingIdxsModule);
-            Source encodingModule = Source.newBuilder("js", encoding, "encoding.js").build();
-            context.eval(encodingModule);
-            Source prepModule = Source.newBuilder("js", prep, "prep.js").build();
-            context.eval(prepModule);
-
-            // Load the excelize module as an ECMAScript module
-            Source excelizeModule = Source.newBuilder("js", excelizeLib, "excelize.mjs")
-                    .mimeType("application/javascript+module")
-                    .uri(URI.create(INTERNAL_MODULE_URI_HEADER + "excelize.mjs"))
-                    .build();
-            Value excelizeMod = context.eval(excelizeModule);
-            context.getPolyglotBindings().putMember("excelize", excelizeMod);
-            context.getBindings("js").putMember("wasmBytes", excelizeWasmBytes);
-
-            // Read the existing Excel file ("output.xlsx") from disk
-            byte[] fileBytes = Files.readAllBytes(Paths.get("output.xlsx"));
+            byte[] fileBytes = resourceResolver.getResourceAsStream("classpath:output.xlsx").get().readAllBytes();
             // Convert file bytes to a JS array
             Value jsArray = context.eval("js", "[]");
             for (byte b : fileBytes) {
@@ -224,8 +72,7 @@ public class ExcelizeService {
             context.getPolyglotBindings().putMember("excelFile", jsArray);
 
             context.getBindings("js").putMember("excelFileBytes", excelBytes);
-            Source testRun = Source.newBuilder("js", test, "excelize_test.js").build();
-            context.eval(testRun);
+
 
             Value readFunc = context.getBindings("js").getMember("readExcel");readFunc.execute();
             Value bufferArray = context.getPolyglotBindings().getMember("resultArray");
@@ -250,9 +97,6 @@ public class ExcelizeService {
                 }
             }
             return books;
-
-
-
         }
-        }
-    }
+      }
+
